to fix ctype trouble in some recent Linux versions.  No behavior
should change.

Sun Apr  6 22:38:56 MDT 2008
  libf2c.zip: adjust alternate makefiles to reflect yesterday's change.

Wed Nov 26 23:23:27 MST 2008
  libf2c.zip: add brief discussion of MacOSX to comments in makefile.u.

Fri Jan  2 23:13:25 MST 2009
  libf2c.zip: add  -DNO_ISATTY to CFLAGS assignment in makefile.vc.

Sat Apr 11 18:06:00 MDT 2009
  src/sysdep.c src/sysdeptest.c: tweak for MacOSX (include <unistd.h>).

Wed Jul  7 10:51:12 MDT 2010
  src/data.c, src/format.c, src/p1output.c:  "invisible" tweaks to
silence warnings seen in compilation under Ubuntu; version.c not changed.

Fri Aug 27 09:14:17 MDT 2010
  format.c: make sizeof(buf) depend on MAXNAMELEN to fix a bug with long
names.  Update mswin/f2c.exe.gz accordingly.

Fri Sep  3 16:03:24 MDT 2010
  fc:  have "-m ..." modify CC rather than CFLAGS (to affect linking).

Mon Aug  1 13:46:40 MDT 2011
  README, README in libf2c.zip: update some netlib pointers.

Thu Sep 26 16:42:35 MDT 2013
  arithchk.c and sysdep1.h0 updated.  The former has a new
"#ifdef NO_SSZIZE_T" section for use elsewhere.  The latter has a
change supplied by Gregor Richards for use with some libc variants.

Fri Jul 11 16:29:03 MDT 2014
  comptry.bat in libf2c.zip updated.

NOTE:  the old libf77 and libi77 bundles are no longer being updated.
Use libf2c.zip instead.

20160102
  malloc.c:  use memmove rather than memcpy in realloc().

20181026
  Fix an allocation glitch in proc.c:
1149c1149
< 	    size = sizeof(int) + (3 + 2 * nd) * sizeof (expptr);
---
> 	    size = sizeof(struct Dimblock) + 2*sizeof(expptr)*(nd-1);
Thanks to Ole Streicher for pointing out the need for this change.

20190311
  main.c:  update URL's in "f2c -?" and "f2c --help" output.

20191129
  pread.c: fix a glitch not known to have caused any trouble:
355c355
< 		if (c < '0' && c > '9')
---
> 		if (c < '0' || c > '9')

20200425
  sysdeptest.c: add #include <stdlib.h>