@@ -1,20 +1,20 @@
 Notice	76f23b4	1212
 README	f11dd32a	7973
 cds.c	147aded1	4221
-data.c	e53078ae	10697
+data.c	32116b2	10688
 defines.h	fd9fa7c5	8720
 defs.h	e48cebb	34523
 equiv.c	fdeff25	9340
 error.c	ef1dd812	5015
-exec.c	e169a868	21191
+exec.c	e8f52ce0	21217
 expr.c	6bfe005	72276
 f2c.1	b0441b2	7532
 f2c.1t	bf1f87	7574
 f2c.h	e770b7d8	4688
-format.c	f97004df	59746
+format.c	f00da069	59974
 format.h	b396862	458
-formatdata.c	11a95834	28870
-ftypes.h	9a0b38c	1616
+formatdata.c	1f0f56eb	28988
+ftypes.h	e2533d86	1836
 gram.c	3794117	64242
 gram.dcl	e38579ff	8463
 gram.exec	e20ca496	3033
@@ -31,29 +31,29 @@ main.c	e23f7b59	20898
 makefile.u	e0dd1cab	3710
 makefile.vc	eb8aae7c	2685
 malloc.c	3505600	4020
-mem.c	e54b227d	5437
+mem.c	ad64d7c	5437
 memset.c	12a1e1aa	2121
 misc.c	8d99c9	22945
 names.c	fa887031	21553
 names.h	110806d6	569
 niceprintf.c	141fb644	10950
 niceprintf.h	c31f08c	412
-output.c	ee3a3cc5	43483
+output.c	ff23aa0b	43483
 output.h	fa6797d9	2103
 p1defs.h	1b02743	5741
-p1output.c	6fd9954	14376
+p1output.c	ff485aba	14681
 parse.h	18d34e6b	1119
 parse_args.c	eb2fd4ea	14145
 pccdefs.h	1b4fbbee	1195
 pread.c	fb4d5427	17831
-proc.c	e7d9505a	39179
+proc.c	e6d47490	39179
 put.c	af0be95	10345
 putpcc.c	7669b2f	46093
-sysdep.c	fe71c52a	15893
+sysdep.c	f34bbeb6	15877
 sysdep.h	e7826434	2755
 sysdeptest.c	449a7d0	428
 tokens	188b7c5d	733
 usignal.h	1c4ce909	124
 vax.c	8b21b83	12436
-version.c	1ab8b513	107
+version.c	f5590e6a	107
 xsum.c	e05654a7	6653
